introducing middlewares, change from index to app

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
